start working on api definition
